--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 # jpa.hibernate
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 # MySQL
 spring.datasource.url=jdbc:mysql://52.78.66.226:3306/musinsa?characterEncoding=UTF-8&serverTimezone=UTC
