gradle run 설정 추가

--- a/build.gradle
+++ b/build.gradle
@@ -56,3 +56,6 @@ asciidoctor {
     inputs.dir snippetsDir
     dependsOn test
 }
+
+apply plugin: 'application'
+mainClassName = 'com.musinsa.UrlShortener.UrlShortenerApplication'
